# haddock-annot

./: README.md
Cabal-1.10.1.1/: Cabal.cabal
Cabal-1.10.1.1/Distribution/: Compiler.hi  GetOpt.hi  InstalledPackageInfo.hi  License.hi  ModuleName.hi  Package.hi  PackageDescription.hi  ParseUtils.hi  ReadE.hi  Simple.hi  System.hi  TestSuite.hi  Text.hi  Verbosity.hi  Version.hi
Cabal-1.10.1.1/Distribution/Compat/: CopyFile.hi  Exception.hi  ReadP.hi  TempFile.hi
Cabal-1.10.1.1/Distribution/PackageDescription/: Check.hi  Configuration.hi  Parse.hi
Cabal-1.10.1.1/Distribution/Simple/: .Haddock.hs.swo  .Haddock.hs.swp  Build.hi  BuildPaths.hi  Command.hi  Compiler.hi  Configure.hi  GHC.hi  Haddock.hi  Haddock.hs  Hugs.hi  Install.hi  InstallDirs.hi  JHC.hi  LHC.hi  LocalBuildInfo.hi  NHC.hi  PackageIndex.hi  PreProcess.hi  Program.hi  Register.hi  Setup.hi  Setup.hs  SrcDist.hi  Test.hi  UHC.hi  UserHooks.hi  Utils.hi
Cabal-1.10.1.1/Distribution/Simple/GHC/: IPI641.hi  IPI642.hi
Cabal-1.10.1.1/Language/Haskell/: Extension.hi
cabal-install-0.10.3/: cabal-install.cabal
haddock-2.9.3/: haddock.cabal
haddock-2.9.3/doc/: haddock.xml
haddock-2.9.3/src/: Main.hs
haddock-2.9.3/src/Haddock/: Options.hs  Types.hs
hscolour-1.18/: HsColour.hs  Makefile  hscolour.cabal
hscolour-1.18/Language/Haskell/: HsColour.hs
hscolour-1.18/Language/Haskell/HsColour/: ACSS.hs  ANSI.hs  Anchors.hs  CSS.hs  Classify.hs  ColourHighlight.hs  Colourise.hs  General.hs  HTML.hs  InlineCSS.hs  LaTeX.hs  MIRC.hs  Options.hs  Output.hs  TTY.hs
(+13 files in other folders)
